--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -21,7 +21,18 @@
       </div> -->
 
       <div class="project">  
-        <a #meanblog routerLink="/" (click)="ProjectClick(firestore)">
+        <a #firebaseCloud routerLink="/" (click)="ProjectClick(firebaseCloud)">
+          <div class="thumb">
+              <img alt="Firebase Cloud Functions" src="../../../assets/img/Firebase Cloud Functions.PNG">
+              <div class="overlay">
+              </div>
+          </div>  
+          <p><strong>Most Loved Languages</strong> – A simple demonstration of Firebase Cloud Functions</p>
+        </a>  
+      </div>
+
+      <div class="project">  
+        <a #firestore routerLink="/" (click)="ProjectClick(firestore)">
           <div class="thumb">
               <img alt="Firestore" src="../../../assets/img/Firestore.PNG">
               <div class="overlay">
