--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -27,7 +27,7 @@
               <div class="overlay">
               </div>
           </div>  
-          <p><strong>Most Loved Languages</strong> – A simple demonstration of Firebase Cloud Functions</p>
+          <p><strong>Firebase Cloud Functions</strong> – A simple demonstration of Firebase Cloud Functions</p>
         </a>  
       </div>
 
